-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
0d8529796 (dev), 0e1a782f8 (6.6)
Reproducible with Surface Graph Gallery > Spectrogram. Click on the graph, and the slice view is correct, but graph view is not scaled at all.
- is required for
-
QTBUG-114463 Match or exceed the visual quality of QtDataVisualization
-
- Closed
-
For Gerrit Dashboard: QTBUG-113677 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
484506,2 | Zoom level correction on orthographic camera when it's in slice view | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
484704,2 | Zoom level correction on orthographic camera when it's in slice view | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |