Zoom level correction on orthographic camera when it's in slice view

The original graph was incorrectly shown when it is using
orthographic camera and goes into slice view.

Fixes: QTBUG-113677
Pick-to: 6.6
Change-Id: I1b21734a80c3319cc045be3b246161d06919e59d
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>